[project]
name = "gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "ollama>=0.5.1",
    "plotly>=6.2.0",
    "psutil>=7.0.0",
    "pymongo>=4.13.2",
    "ratelimit>=2.2.1",
    "requests>=2.32.4",
    "streamlit>=1.46.1",
    "tiktoken>=0.9.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
